--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node build/index.js",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +17,15 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
+    "@types/selenium-webdriver": "^4.1.28",
+    "cheerio": "^1.0.0",
+    "chromedriver": "^133.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "install": "^0.13.0",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
+    "selenium-webdriver": "^4.28.1",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
